project(renderer)

set(TARGET_TYPE "StaticLibrary")
include(${CMAKE_SOURCE_DIR}/cmake/BuildOptions.cmake)

set(SRC_FILES
    "apexRenderInterface.cpp"
    "debugPageCharacterLods.cpp"
    "debugPageDynamicTextures.cpp"
    "debugWindowDynamicTextures.cpp"
    "debugWindowGpuResourceUse.cpp"
    "debugWindowRenderResources.cpp"
    "gameplayFxFocusMode.cpp"
    "gameplayFxCatView.cpp"
    "gameplayFxDrunk.cpp"
    "gameplayFxOutline.cpp"
    "gameplayFxSepia.cpp"
    "gameplayFxSurface.cpp"
    "renderCollectorTickList.cpp"
    "renderDecalMesh.cpp"
    "renderDefragHelper.cpp"
    "renderDestructionMesh.cxx"
    "renderDissolve.cpp"
    "renderFramePrefetch.cpp"
    "renderFurMesh.cpp"
    "renderGameplayRenderTarget.cpp"
    "renderLoadingOverlay.cpp"
    "renderInitialFrame.cpp"
    "renderLoadingScreen.cpp"
    "debugWindowTextureStreaming.cpp"
    "renderDistantLightBatcher.cpp"
    "renderDynamicDecalBatcher.cpp"
    "renderElementMap.cpp"
    "renderDynamicDecalChunk.cpp"
    "renderDynamicDecalChunk_Apex.cpp"
    "renderDynamicDecalChunk_Mesh.cpp"
    "renderDynamicDecalTarget.cpp"
    "renderEnvProbe.cxx"
    "renderEnvProbeLoading.cpp"
    "renderEnvProbeManager.cpp"
    "renderEnvProbeRendering.cpp"
    "rendererDebugWindows.cpp"
    "rendererNames.cpp"
    "renderGrassUpdateData.cpp"
    "renderLoadingScreenFence.cpp"
    "renderLoadingBlur.cpp"
    "renderMeshStreaming.cpp"
    "renderMorphedMesh.cpp"
    "renderNvOptimus.cpp"
    "renderPostFxHBSSAO.cpp"
    "renderPostFxMicrosoftSSAO.cpp"
    "renderProxyDestructionMesh.cpp"
    "renderProxyDimmer.cpp"
    "renderDynamicDecal.cpp"
    "renderProxyDissolvable.cpp"
    "renderProxyFadeable.cpp"
    "renderProxyMorphedMesh.cpp"
    "renderProxyStripe.cpp"
    "renderProxySwarm.cpp"
    "renderFrameTracker.cpp"
    "renderQuery.cpp"
    "renderScaleformTempOrbis.cpp"
    "renderTextureStreamingCooked.cpp"
    "renderTextureStreamingNonCooked.cpp"
    "renderTextureStreamRequest.cpp"
    "renderVideoPlayer.cpp"
    "renderSimDiffusion2D.cpp"
    "renderSimDynamicWater.cpp"
    "renderSimWaterFFT.cpp"
    "renderSkinManager.cxx"
    "renderSkybox.cpp"
    "renderSwarmAnimationManager.cpp"
    "renderSwarmBatcher.cpp"
    "renderSwarmData.cpp"
    "renderTextureArray.cxx"
    "geometryBuffer.cpp"
    "renderScaleformCommands.cpp"
    "renderApexBatcher.cpp"
    "renderConstantBufferShared.cpp"
    "renderElementApex.cpp"
    "renderEntityGroup.cpp"
    "renderBinkVideo.cpp"
    "renderProxyFur.cpp"
    "renderScaleformHal.cpp"
    "renderScaleformMeshCache.cpp"
    "renderScaleformShader.cpp"
    "guiRenderSystemScaleform.cpp"
    "renderScaleformTempD3D11.cpp"
    "renderScaleformTexture.cpp"
    "renderLodBudgetSystem.cpp"
    "renderParticleBuffer.cpp"
    "particleGenerateVertex.cpp"
    "particleInitialization.cpp"
    "particleModification.cpp"
    "particleVertexBuffer.cpp"
    "renderCommands.cpp"
    "renderCounter.cpp"
    "renderDeferred.cpp"
    "renderDrawer.cpp"
    "renderFragments.cpp"
    "renderInterface.cpp"
    "renderParticleData.cpp"
    "renderParticleEmitter.cpp"
    "renderProxyApex.cpp"
    "renderProxyDecal.cpp"
    "renderProxySpeedTree.cpp"
    "renderProxyTerrain.cpp"
    "renderProxyWater.cpp"
    "renderRenderFrame.cpp"
    "renderShadowDynamicAllocator.cpp"
    "renderShadowManager.cpp"
    "renderShadowRegions.cpp"
    "renderShadowStaticAllocator.cpp"
    "renderSkinningData.cpp"
    "renderSpeedTreeResource.cpp"
    "renderStateManager.cpp"
    "renderTerrainShadows.cpp"
    "renderTerrainUpdateData.cpp"
    "renderTextureAllocator.cpp"
    "renderTextureBase.cpp"
    "renderTextureStreaming.cpp"
    "renderThread.cpp"
    "renderVideo.cpp"
    "renderPostProcess.cpp"
    "renderBrushFaceBatcher.cpp"
    "renderFlaresBatcher.cpp"
    "renderMeshBatcher.cpp"
    "renderParticleBatcher.cpp"
    "renderTerrainLogicMap.cpp"
    "renderCollector.cpp"
    "renderFence.cpp"
    "renderHelpers.cpp"
    "renderOcclusion.cpp"
    "renderScene.cpp"
    "renderSequenceGrabber.cpp"
    "renderViewportWindowRoot.cpp"
    "renderVisibilityExclusionMap.cpp"
    "renderVisibilityQuery.cpp"
    "renderElement.cpp"
    "renderElementBrushFace.cpp"
    "renderElementMeshChunk.cpp"
    "renderElementParticleEmitter.cpp"
    "renderProxy.cpp"
    "renderProxyBrushFace.cpp"
    "renderProxyDrawable.cpp"
    "renderProxyFlare.cpp"
    "renderProxyLight.cpp"
    "renderProxyMesh.cpp"
    "renderProxyParticles.cpp"
    "renderProxyPointLight.cpp"
    "renderProxySpotLight.cpp"
    "aviutils.cpp"
    "debugPageMeshTextures.cpp"
    "debugPageResources.cpp"
    "debugPageTextures.cpp"
    "renderDebugMacros.cpp"
    "gameplayFx.cpp"
    "renderVisibilityQueryManager.cpp"
    "renderWMVVideo.cpp"
    "shaders.cpp"
    "shadowCascade.cpp"
    "speedTreeDensityDebugger.cpp"
    "speedTreeRenderInterface.cpp"
    "stateBlock.cpp"
    "subframeInterpolation.cpp"
    "texture.cpp"
    "tiledDeferred.cpp"
    "renderRenderSurfaces.cpp"
    "renderShaderPair.cpp"
    "renderCube.cxx"
    "renderDebugMesh.cxx"
    "renderDynamicIndexBuffer.cxx"
    "renderDynamicResource.cxx"
    "renderDynamicVertexBuffer.cxx"
    "renderMaterial.cxx"
    "renderMesh.cxx"
    "renderShader.cxx"
    "renderStaticResource.cxx"
    "renderTexture.cxx"
    "renderViewport.cxx"
    "renderViewportWindow.cxx"
    "build.cpp"
)

add_library(${PROJECT_NAME} STATIC ${SRC_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_SOURCE_DIR}/dev/external/speedtree/Include
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/physxvisualdebuggersdk
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/pxtask
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/extensions
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/characterkinematic
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/common
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/cooking
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/foundation
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/geometry
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/gpu
    ${CMAKE_SOURCE_DIR}/dev/external/PhysX3/Include/pvd
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/framework/public
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/framework/public/PhysX3
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/NxParameterized/public
    ${CMAKE_SOURCE_DIR}/dev/external/Apex/public
    ${CMAKE_SOURCE_DIR}/dev/external/umbra3.3.13-change-26-2826-2/interface
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Src
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Include
)

target_link_libraries(${PROJECT_NAME})

target_precompile_headers(${PROJECT_NAME}
    PRIVATE
    build.h
)
