project(r4)

set(TARGET_TYPE "StaticLibrary")
include(${CMAKE_SOURCE_DIR}/cmake/BuildOptions.cmake)

set(SRC_FILES
    "abilityManager.cpp"
    "alchemy.cpp"
    "animAttackEvent.cpp"
    "areaMappinsResource.cpp"
    "beehive.cpp"
    "behTreeCarryingItemBaseDecorator.cpp"
    "behTreeCarryingItemBaseNode.cpp"
    "behTreeCarryingItemData.cpp"
    "behTreeCarryingItemDrop.cpp"
    "behTreeCarryingItemPick.cpp"
    "behTreeFindDestinyItemStoreDecorator.cpp"
    "behTreeFindSourceItemStoreDecorator.cpp"
    "behTreeFlightData.cpp"
    "behTreeMetanodeOnCombatstyle.cpp"
    "behTreeMetanodeSetupReachability.cpp"
    "behTreeNodeAtomicFlight.cpp"
    "behTreeNodeAtomicFlyTo.cpp"
    "behTreeNodeAtomicFlyAround.cpp"
    "behTreeNodeBroadcastReactionScene.cpp"
    "behTreeNodeConditionHasAbility.cpp"
    "behTreeNodeConditionIsInInterior.cpp"
    "behTreeNodeConditionIsTargetThePlayer.cpp"
    "behTreeNodeConditionShouldPursueCombatTarget.cpp"
    "behTreeNodeConditionSpeech.cpp"
    "behTreeNodeDecoratorFindLandingSpot.cpp"
    "behTreeNodeDecoratorGlide.cpp"
    "behTreeNodeDecoratorHLCombatWildHorse.cpp"
    "behTreeNodeDecoratorBruxaDeath.cpp"
    "behTreeNodeDisableTalkInteraction.cpp"
    "behTreeNodeGreetingReactionScene.cpp"
    "behTreeNodeDynamicFlightIdle.cpp"
    "behTreeNodePCLockControl.cpp"
    "behTreeNodePCReleaseControl.cpp"
    "behTreeNodeDynamicCombatStyle.cpp"
    "behTreeNodeRequestItems.cpp"
    "behTreeNodeSelectTargetOrMountByTag.cpp"
    "behTreeNodeSpeech.cpp"
    "behTreeSailorFollowPath.cpp"
    "behTreeNodeFlee.cpp"
    "behTreeDecoratorRiderHorseReachability.cpp"
    "behTreeNodeHLCombatLock.cpp"
    "behTreeSailorMoveTo.cpp"
    "boatSpawner.cpp"
    "cameraTools.cpp"
    "carryableItemsRegistry.cpp"
    "carryableItemsStorePoint.cpp"
    "cityLightManager.cpp"
    "commonMapStructs.cpp"
    "customCSEvents.cpp"
    "customSceneEvents.cpp"
    "dlcQuestMounter.cpp"
    "dynamicTagsContainer.cpp"
    "effectComponent.cpp"
    "fistfightMinigame.cpp"
    "gameParams.cpp"
    "getRiderOrMountHelper.cpp"
    "minimapManager.cpp"
    "questMapPinsResource.cpp"
    "questResetScriptedActionsBlock.cpp"
    "questSpawnNotStreamedBoatBlock.cpp"
    "journalQuestMonsterKnownGraphBlock.cpp"
    "journalQuestTrackBlock.cpp"
    "moveOnRoadSteering.cpp"
    "questGraphWalker.cpp"
    "r4BehTreeNodePredefinedPath.cpp"
    "r4DLCActionPointCategoriesMounter.cpp"
    "r4DLCAnalyzer.cpp"
    "r4DLCAnimationsCategoriesMounter.cpp"
    "r4DLCAppearanceMounter.cpp"
    "r4DLCAttitudesMounter.cpp"
    "r4DLCDefinitionsEntitieTemplatesMounter.cpp"
    "r4DLCDefinitionsMounter.cpp"
    "r4DLCDefinitionsNGPlusMounter.cpp"
    "r4DLCDropPhysicsSetupMounter.cpp"
    "r4DLCEntityTemplateParamMounter.cpp"
    "r4DLCEntityTemplateSlotMounter.cpp"
    "r4DLCFinishersMounter.cpp"
    "r4DLCJournalEntriesMounter.cpp"
    "r4DLCJournalMounter.cpp"
    "r4DLCMappinsMounter.cpp"
    "r4DLCResourceDefinitionsMounter.cpp"
    "r4DLCRewardsMounter.cpp"
    "r4DLCScaleformContentMounter.cpp"
    "r4DLCSceneAnimationsMounter.cpp"
    "r4DLCVoicetagMounter.cpp"
    "r4DLCVideoMounter.cpp"
    "r4DLCWorldMounter.cpp"
    "r4GameDebuggerCommands.cpp"
    "gameplayLightComponent.cpp"
    "gwintMinigame.cpp"
    "instantMountPartySpawnOrganizer.cpp"
    "behTreeDecoratorCluePath.cpp"
    "behTreeDecoratorHorseSpeedManager.cpp"
    "behTreeDecoratorRiderWaitHorseScriptedAction.cpp"
    "behTreeNodeClosestNonFriendlyTargetSelection.cpp"
    "behTreeNodePredefinedPathRubberBand.cpp"
    "behTreeRiderSpecific.cpp"
    "behTreeConditionAttackersCount.cpp"
    "behTreeConditionIsDead.cpp"
    "behTreeConditionIsEnemyAround.cpp"
    "behTreeAtomicForgetCombatTarget.cpp"
    "behTreeNodeCombatTargetSelection.cpp"
    "behTreeDecoratorHLCombat.cpp"
    "behTreeNodeRiderForced.cpp"
    "behTreeNodeRiderIdleRoot.cpp"
    "behTreeNodeStrafing.cpp"
    "behTreeNodeTicketDecoratorBase.cpp"
    "behTreeNodeTicketHas.cpp"
    "behTreeNodeTicketLock.cpp"
    "behTreeNodeTicketManager.cpp"
    "behTreeNodeTicketRelease.cpp"
    "behTreeNodeTicketRequest.cpp"
    "behTreeNodeVitalSpotActive.cpp"
    "behTreeRidingManager.cpp"
    "behTreeScriptTicketAlgorithm.cpp"
    "behTreeTicketAlgorithm.cpp"
    "behTreeTicketData.cpp"
    "behTreeNodeTicketGet.cpp"
    "behTreeCluePathData.cpp"
    "commonMapManager.cpp"
    "dynamicClueStorage.cpp"
    "fastSurround.cpp"
    "horseSteering.cpp"
    "mapFastTravel.cpp"
    "questSpawnVehicleBlock.cpp"
    "menuEvents.cpp"
    "r4CommonAnalyzer.cpp"
    "r4GameAnalyzer.cpp"
    "r4GameDebuggerPlugin.cpp"
    "r4GuiAnalyzer.cpp"
    "r4GwintManager.cpp"
    "r4HumanoidCombatComponent.cpp"
    "r4interiorAreaComponent.cpp"
    "journalPlace.cpp"
    "r4ItemAnalyzer.cpp"
    "r4journalPlaceEntity.cpp"
    "mainMenuController.cpp"
    "profilerConsoleCommands.cpp"
    "questCombatManagerBlock.cpp"
    "r4ActionPointSelector.cpp"
    "r4BehTreeVarEnums.cpp"
    "r4CameraDirector.cpp"
    "r4CreateEntityManager.cpp"
    "r4GlobalEventsScriptsDispatcher.cpp"
    "r4Kinect.cpp"
    "r4MapPinEntity.cpp"
    "r4LootManager.cpp"
    "r4MapTracking.cpp"
    "r4MemoryBudgets.cpp"
    "r4PlayerTargeting.cpp"
    "r4PlayerTypes.cpp"
    "r4popup.cpp"
    "r4ReactionManager.cpp"
    "r4ResourceAnalyzer.cpp"
    "r4SecondScreenManager.cpp"
    "r4SecondScreenManagerScriptProxy.cpp"
    "r4StartupAnalyzer.cpp"
    "r4Enums.cpp"
    "rainActionPointSelector.cpp"
    "rangedWeapon.cpp"
    "spawnTreeInitializerFlight.cpp"
    "swarmCellMap.cpp"
    "swarmEnvironment.cpp"
    "ticketGlobalSource.cpp"
    "ticketSourceProvider.cpp"
    "toxicCloud.cpp"
    "tutorial.cpp"
    "volumePathManager.cpp"
    "gameDebugMenu.cpp"
    "gameEngine.cpp"
    "gameStartupDebugPage.cpp"
    "horsePrediction.cpp"
    "journalCharacter.cpp"
    "journalCreature.cpp"
    "journalEvents.cpp"
    "journalGlossary.cpp"
    "journalItems.cpp"
    "journalQuest.cpp"
    "journalQuestBlock.cpp"
    "journalQuestHuntingBlock.cpp"
    "journalQuestMappinStateBlock.cpp"
    "journalQuestObjectiveCounterGraphBlock.cpp"
    "journalStoryBook.cpp"
    "journalTutorial.cpp"
    "manageSwitchBlock.cpp"
    "questChangeWorldBlock.cpp"
    "questPlayAnimationBlock.cpp"
    "questUICondition.cpp"
    "questRiderScriptedActionsBlock.cpp"
    "questUsedFastTravelCondition.cpp"
    "r4AiParameters.cpp"
    "r4GuiManager.cpp"
    "r4Hud.cpp"
    "r4HudModule.cpp"
    "r4JournalManager.cpp"
    "r4Menu.cpp"
    "r4Names.cpp"
    "riderSpawnTreeInitializers.cpp"
    "ridingAiStorage.cpp"
    "r4Classes.cpp"
    "r4LootDefinitions.cpp"
    "EntityMappinsResource.cpp"
    "r4BehTreeRtti.cpp"
    "behTreeStrafingAlgorithm.cpp"
    "behTreeDecoratorChangeBehaviorGraph.cpp"
    "behTreeDecoratorSetBehaviourVariable.cpp"
    "buffImmunity.cpp"
    "build.cpp"
    "flyingPoiConfig.cpp"
    "combatDataComponent.cpp"
    "comboAspect.cpp"
    "comboDefinition.cpp"
    "comboPlayer.cpp"
    "comboString.cpp"
    "customCameraCollision.cpp"
    "damageData.cpp"
    "encounterMountedEntry.cpp"
    "encounterImpl.cpp"
    "flyingCritterAlgorithmData.cpp"
    "flyingCrittersAI.cpp"
    "flyingCrittersLairEntity.cpp"
    "flyingCrittersLairEntityScript.cpp"
    "flyingCrittersParams.cpp"
    "flyingCritterUpdateJob.cpp"
    "flyingSwarmGroup.cpp"
    "focusModeController.cpp"
    "gameplayEffectExecutor.cpp"
    "GameplayFXMedalion.cpp"
    "gameplayFXSurfacePost.cpp"
    "horseAnimNode.cpp"
    "humbleCritterAlgorithmData.cpp"
    "humbleCrittersLairEntity.cpp"
    "humbleCrittersAI.cpp"
    "humbleCritterSound.cpp"
    "humbleCritterUpdateJob.cpp"
    "mapPinData.cpp"
    "customCameraControllers.cpp"
    "customCamera.cpp"
    "monsterParam.cpp"
    "playerStateUseVehicle.cpp"
    "preAttackEvent.cpp"
    "questBehaviorCtrlBlock.cpp"
    "questBehaviorEventBlock.cpp"
    "questBehaviorNotificationBlock.cpp"
    "questBehaviorSocket.cpp"
    "questControlledNPC.cpp"
    "questManageFastTravelBlock.cpp"
    "r4BehTreeInstance.cpp"
    "r4Game.cpp"
    "r4GameResource.cpp"
    "r4Player.cpp"
    "r4PlayerControlAction.cpp"
    "r4PlayerController.cpp"
    "r4PlayerLocomotionSegment.cpp"
    "r4QuestSystem.cpp"
    "r4BoidSpecies.cpp"
    "r4SwarmSound.cpp"
    "r4SwarmUtils.cpp"
    "enemiesCachedData.cpp"
    "r4Telemetry.cpp"
    "r4TelemetryScriptProxy.cpp"
    "steeringStrafing.cpp"
    "stepClipAnimationParam.cpp"
    "applySteeringToPlayer.cpp"
    "ticketSystem.cpp"
    "ticketSystemConfiguration.cpp"
    "vitalSpot.cpp"
    "w2saveImporter.cpp"
    "w3Boat.cpp"
    "w3GenericVehicle.cpp"
    "witcherSword.cpp"
    "worldMap.cpp"
)

if (${GAME_CONFIG} STREQUAL "FinalWithLogging" OR ${GAME_CONFIG} STREQUAL "Profiling")
    list(APPEND SRC_FILES "r4DebugDataService.cpp")
    list(APPEND SRC_FILES "r4DebugDataServiceLogOutputDevice.cpp")
endif()


add_library(${PROJECT_NAME} STATIC ${SRC_FILES})

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Src
    ${CMAKE_SOURCE_DIR}/dev/external/gfx4/Include
)

target_link_libraries(${PROJECT_NAME})

target_precompile_headers(${PROJECT_NAME}
    PRIVATE
    build.h
)
